--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar" id="top">
   <a class="navbar-brand" href="/">
     <img src="/assets/y.jpg" width="30" height="30" class="d-inline-block align-top" alt="logo">
     Yelper
@@ -7,9 +7,6 @@
   <ul class="navbar mr-auto inline">
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="specific">About</a>
       </li>
       <li class="nav-item">
         {{#if session.isAuthenticated}}
@@ -22,5 +19,9 @@
       <LinkTo @route="favorites"><li class="nav-item">Favorites</li></LinkTo>
   </ul>
 </nav>
+
+<footer>
+  <a href="#top">Back to Top</a>
+</footer>
 
 {{outlet}}
